Smaller asset files

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <a href="./assets/outdoor-gallery-9.jpg"><img src="./assets/outdoor-gallery-9.jpg"></a>
     <a href="./assets/outdoor-gallery-10.jpg"><img src="./assets/outdoor-gallery-10.jpg"></a>
     <a href="./assets/outdoor-gallery-11.jpg"><img src="./assets/outdoor-gallery-11.jpg"></a>
-    <a href="./assets/outdoor-gallery-12.png"><img src="./assets/outdoor-gallery-5.png"></a>
+    <a href="./assets/outdoor-gallery-12.jpg"><img src="./assets/outdoor-gallery-12.jpg"></a>
     <a href="./assets/outdoor-gallery-13.jpg"><img src="./assets/outdoor-gallery-13.jpg"></a>
   </div>
 </body>
