--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@
       style="width: 180px; height: 50px; position: absolute; background-color: #FFFFFF; right: 0; display: flex; justify-content: center; align-items: center; cursor: pointer;">
       <img src="./assets/skip-intro-button-contents.svg" />
     </div>
+    <div id="mute-button-container"
+      style="width: 30px; height: 30px; position: absolute; left: 2px; display: flex; justify-content: center; align-items: center; cursor: pointer; background-color: white; padding: 5px;">
+        <img id="intro-video-muted-icon" src="./assets/volume-xmark-solid.svg" style="width: 100%; height: 100%;" />
+        <img id="intro-video-unmuted-icon" src="./assets/volume-high-solid.svg" style="width: 100%; height: 100%; display: none;" />
+    </div>
   </div>
   <div id="navbar"
     style="width: 100%; display: none; position: fixed; z-index: 9999; background-color: white; height: 50px;">
@@ -592,6 +597,7 @@
   // video starts with a black screen.  Auto-scroll to the bottom so that the player can show its elements.
   const introVideoElement = document.getElementById('intro-video-player')
   const skipIntroButtonElement = document.getElementById('skip-intro-button')
+  const muteButtonElement = document.getElementById('mute-button-container')
   introVideoElement.addEventListener('canplay', () => {
     window.scrollTo(0, introVideoElement.offsetHeight)
 
@@ -606,6 +612,7 @@
   function resetIntroVideoWidth() {
     introVideoElement.setAttribute('width', window.innerWidth)
     skipIntroButtonElement.style.top = `${introVideoElement.offsetHeight - 70}px`
+    muteButtonElement.style.top = `${introVideoElement.offsetHeight - 70}px`
   }
 
   resetIntroVideoWidth()
@@ -724,6 +731,23 @@
       const bannerImageParentWidth = bannerImageParent.offsetWidth
 
       bannerImage.style.width = `${Math.ceil(bannerImageParentWidth) + 1}px`
+    }
+  }
+
+  const muteButtonContainer = document.getElementById('mute-button-container')
+  muteButtonContainer.onclick = () => {
+    const introVideoElement = document.getElementById('intro-video-player')
+    introVideoElement.muted = !introVideoElement.muted
+
+    const unmutedIcon = document.getElementById('intro-video-unmuted-icon')
+    const mutedIcon = document.getElementById('intro-video-muted-icon')
+
+    if (introVideoElement.muted) {
+      unmutedIcon.style.display = 'none'
+      mutedIcon.style.display = 'initial'
+    } else {
+      unmutedIcon.style.display = 'initial'
+      mutedIcon.style.display = 'none'
     }
   }
 
